--- a/client/css/another.css
+++ b/client/css/another.css
@@ -56,7 +56,7 @@
             /* Menu Screen Style */
             #menu{
                 display: block;
-                width: 600px;
+                width: 80%;
                 padding-top: 95px;
                 padding-bottom: 95px;
                 font-size: 40px;
@@ -81,7 +81,8 @@
             }
             #menu2{
                 display: block;
-                width: 600px;
+                width: 80%;
+                height:100%
                 padding-top: 95px;
                 padding-bottom: 95px;
                 font-size: 40px;
@@ -97,13 +98,17 @@
                 margin-bottom: 30px;
                 
             }
-            
+            #menu2 p{
+                font-size 40px;
+                background:orange;
+            }
+
             #menu2 a{
                 font-size: 30px;
             }
             #menu3{
                 display: block;
-                width: 600px;
+                width: 80%;
                 padding-top: 95px;
                 padding-bottom: 95px;
                 font-size: 40px;
